# IfcOpenShell

src/ifcviewer/: CMakeLists.txt  README.md  main.cpp
src/ifcviewer/qml/IfcViewer/Ui/: CMakeLists.txt  Main.qml
